--- a/SecuredSystem/SecuredSystem.csproj
+++ b/SecuredSystem/SecuredSystem.csproj
@@ -172,6 +172,10 @@
     <Compile Include="Migrations\201805120926597_intToString.Designer.cs">
       <DependentUpon>201805120926597_intToString.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807222152579_InitialCreate1.cs" />
+    <Compile Include="Migrations\201807222152579_InitialCreate1.Designer.cs">
+      <DependentUpon>201807222152579_InitialCreate1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customers.cs" />
@@ -250,6 +254,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805120926597_intToString.resx">
       <DependentUpon>201805120926597_intToString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807222152579_InitialCreate1.resx">
+      <DependentUpon>201807222152579_InitialCreate1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
