--- a/SecuredSystem/SecuredSystem.csproj
+++ b/SecuredSystem/SecuredSystem.csproj
@@ -159,6 +159,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AuditController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -176,8 +177,13 @@
     <Compile Include="Migrations\201807222152579_InitialCreate1.Designer.cs">
       <DependentUpon>201807222152579_InitialCreate1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201807232212037_first.cs" />
+    <Compile Include="Migrations\201807232212037_first.Designer.cs">
+      <DependentUpon>201807232212037_first.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AuditTable.cs" />
     <Compile Include="Models\Customers.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\SecuredSystemContext.cs" />
@@ -237,6 +243,11 @@
     <Content Include="Views\Customer\Details.cshtml" />
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Audit\Create.cshtml" />
+    <Content Include="Views\Audit\Delete.cshtml" />
+    <Content Include="Views\Audit\Details.cshtml" />
+    <Content Include="Views\Audit\Edit.cshtml" />
+    <Content Include="Views\Audit\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -257,6 +268,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807222152579_InitialCreate1.resx">
       <DependentUpon>201807222152579_InitialCreate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201807232212037_first.resx">
+      <DependentUpon>201807232212037_first.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
