--- a/SecuredSystem/SecuredSystem.csproj
+++ b/SecuredSystem/SecuredSystem.csproj
@@ -160,6 +160,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AuditController.cs" />
+    <Compile Include="Controllers\ComplaintController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -181,9 +182,30 @@
     <Compile Include="Migrations\201807232212037_first.Designer.cs">
       <DependentUpon>201807232212037_first.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808041929070_complain.cs" />
+    <Compile Include="Migrations\201808041929070_complain.Designer.cs">
+      <DependentUpon>201808041929070_complain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808042010288_flag.cs" />
+    <Compile Include="Migrations\201808042010288_flag.Designer.cs">
+      <DependentUpon>201808042010288_flag.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808042124375_flagclass.cs" />
+    <Compile Include="Migrations\201808042124375_flagclass.Designer.cs">
+      <DependentUpon>201808042124375_flagclass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808042132111_flagid.cs" />
+    <Compile Include="Migrations\201808042132111_flagid.Designer.cs">
+      <DependentUpon>201808042132111_flagid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808042149594_backtoenum.cs" />
+    <Compile Include="Migrations\201808042149594_backtoenum.Designer.cs">
+      <DependentUpon>201808042149594_backtoenum.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AuditTable.cs" />
+    <Compile Include="Models\Complaint.cs" />
     <Compile Include="Models\Customers.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\SecuredSystemContext.cs" />
@@ -248,6 +270,11 @@
     <Content Include="Views\Audit\Details.cshtml" />
     <Content Include="Views\Audit\Edit.cshtml" />
     <Content Include="Views\Audit\Index.cshtml" />
+    <Content Include="Views\Complaint\Create.cshtml" />
+    <Content Include="Views\Complaint\Delete.cshtml" />
+    <Content Include="Views\Complaint\Details.cshtml" />
+    <Content Include="Views\Complaint\Edit.cshtml" />
+    <Content Include="Views\Complaint\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -271,6 +298,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201807232212037_first.resx">
       <DependentUpon>201807232212037_first.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808041929070_complain.resx">
+      <DependentUpon>201808041929070_complain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808042010288_flag.resx">
+      <DependentUpon>201808042010288_flag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808042124375_flagclass.resx">
+      <DependentUpon>201808042124375_flagclass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808042132111_flagid.resx">
+      <DependentUpon>201808042132111_flagid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808042149594_backtoenum.resx">
+      <DependentUpon>201808042149594_backtoenum.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
